src/resources/elements/entry/entry.css
.entry-header {
  display: flex;
  vertical-align: middle;
}
.entry-header-text {
  cursor: pointer;
}
.entry-header-emoji {
  margin-left: auto;
  font-size: 2.25rem;
  line-height: 2.25rem;
}
.entry-activities {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.entry-activity {
  align-items: center;
  cursor: pointer;
}
.entry-note-header {
  font-weight: 600;
}
.entry-note {
  white-space: pre-line;
  overflow-wrap: break-word;
}
.entry-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.entry-footer-dates {
  display: inline-block;
  text-align: right;
}
.entry-footer-dates {
  font-size: 0.75rem;
  line-height: 1rem;
  color: var(--secondary);
}

